# resh

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.en.md  README.md  __init__.py  astratti.py  cache.py  cli.py  config.py  core.py  curate_dataset.py  documento.py  epsilon.py  gamma_types.py  induttivo.py  lambda_space.py  mcp_server.py  obiettivo.py  persistenza.py  pyproject.toml  report.py  requirements.txt  resh_prova_22_06_26.txt.report.md  schemas.py  trace.py
Abstract dataset/: SCHEMA.md  gold_strawman.jsonl
Trilemma dataset/: SCHEMA.md  gold_albert_treatise.jsonl  gold_circolarita_metafisica.jsonl  gold_descartes_meditations.jsonl  gold_friedman_divine_proof.jsonl  gold_hilbert_on_the_infinite.jsonl  gold_leibniz_xv_fenomeni_reali.jsonl  gold_zilioli_nihilist_gorgia_nagarjuna.jsonl
docs/: analisi_bias.md  arsenale_critico_fonte_teorica.md  roadmap.md
examples/: report_berkeley_intro_IT_pertesto_qwen-max.md  report_en_completo.md  report_esempio_it.md  report_ioli_gorgia_IT_documento_qwen-max.md  report_it_completo.md  report_zilioli_nihilist_EN_documento_qwen-plus.md  testo_esempio_it.txt
gamma/: __init__.py  _nli.py  aggregatore.py  annotazione.py  argument_mining.py  bias_autorita.py  chunking.py  chunking_documento.py  coerenza.py  encoder.py  fallacie.py  premesse_nli.py  profilo_linguistico.py  pulizia_input.py  sequitur.py  stilometria.py
lessici/: booster_en.txt  booster_it.txt  connettivi_avversativi_en.txt  connettivi_avversativi_it.txt  connettivi_causali_en.txt  connettivi_causali_it.txt  connettivi_concessivi_en.txt  connettivi_concessivi_it.txt  fallacy_patterns_en.json  fallacy_patterns_it.json  hedging_en.txt  hedging_it.txt  induttivi_en.txt  induttivi_it.txt  retorici_attributivi_en.txt  retorici_attributivi_it.txt  termini_astratti_en.json  termini_astratti_it.json  trilemma_markers_en.json  trilemma_markers_it.json
osservatori/: CLAUDE.md  README.md  lambda_space.py
(+62 files in other folders)
